Update dynamic analysis

--- a/notebooks/DynamicAnalysis.ipynb
+++ b/notebooks/DynamicAnalysis.ipynb
@@ -31,17 +31,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "try:\n",
+    "    df_results\n",
+    "    print('not overwriting df_results')\n",
+    "except:\n",
+    "    df_results = pd.DataFrame(columns=[\n",
+    "        'exp_name',\n",
+    "        'degree', \n",
+    "        'motors',\n",
+    "        'combination_n',\n",
+    "        'combination_method',\n",
+    "        'normalization_method',\n",
+    "        'max_counter',\n",
+    "        'raw_heatmap',\n",
+    "        'dynamic_heatmap',\n",
+    "        'multi_heatmap'\n",
+    "    ])\n",
+    "    print('initialized df_results')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from evaluate_data import read_df, get_spec\n",
     "\n",
-    "#exp_name = '2020_10_30_dynamic' \n",
-    "exp_name = '2020_10_30_dynamic_test' \n",
-    "#exp_name = '2020_10_30_dynamic_move' \n",
+    "#exp_name = '2020_10_30_dynamic'; degree=0 # correct mic positions, but only one degree\n",
+    "exp_name = '2020_10_30_dynamic_test'; degree=0; #degree=90;\n",
+    "#exp_name = '2020_10_30_dynamic_move'; degree=0\n",
     "\n",
-    "df, df_pos = read_df(degree=90, props=False, snr=False, motors=False, source='mono', \n",
-    "                     exp_name=exp_name)\n",
+    "params = dict(\n",
+    "    degree = degree,\n",
+    "    props = False,\n",
+    "    snr = False,\n",
+    "    motors = True,\n",
+    "    source = 'mono',\n",
+    "    exp_name = exp_name\n",
+    ")\n",
+    "\n",
+    "df, df_pos = read_df(**params)\n",
     "df.head()\n",
-    "f_wav, t_wav, spectrogram_wav = get_spec(degree=90, props=False, snr=False, motors=False, source='mono', \n",
-    "                     exp_name=exp_name)"
+    "f_wav, t_wav, spectrogram_wav = get_spec(**params)"
    ]
   },
   {
@@ -56,11 +88,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "n_columns = len(df)\n",
-    "mic_positions = df.iloc[0].mic_positions # n_mics x 2\n",
+    "\n",
+    "mic_positions_df = df.iloc[0].mic_positions # n_mics x 2\n",
+    "from crazyflie_description_py.parameters import MIC_POSITIONS\n",
+    "mic_positions = np.array(MIC_POSITIONS)\n",
+    "\n",
+    "if not np.allclose(mic_positions, mic_positions_df):\n",
+    "    print(\"Warning: wrong mic positions in df!\")\n",
+    "\n",
     "frequencies = df.iloc[0].frequencies\n",
     "print(frequencies)\n",
     "times = df.audio_timestamp.values / 1e6\n",
@@ -102,10 +143,10 @@
     "plt.legend()\n",
     "\n",
     "plt.figure()\n",
-    "mic_positions = df.iloc[0].mic_positions # n_mics x 2\n",
     "for i in range(mic_positions.shape[0]):\n",
     "    plt.scatter(mic_positions[i, 0], mic_positions[i, 1], label=f'mic{i}')\n",
-    "plt.legend()"
+    "plt.legend()\n",
+    "plt.title('mic_positions')"
    ]
   },
   {
@@ -169,10 +210,11 @@
     "from audio_stack.beam_former import BeamFormer\n",
     "from audio_stack.spectrum_estimator import normalize_rows, combine_rows\n",
     "\n",
-    "MAX_COUNTER = 10\n",
+    "MAX_COUNTER = 5\n",
+    "alpha=0.5 # set to 1 for no effect\n",
     "\n",
     "combination_n = MAX_COUNTER\n",
-    "combination_method = \"product\"\n",
+    "combination_method = \"sum\"\n",
     "normalization_method = \"none\"\n",
     "\n",
     "frequencies = df.iloc[0].frequencies[selected_idx]\n",
@@ -190,6 +232,7 @@
     "\n",
     "multi_counter = 0\n",
     "i_col = 0\n",
+    "R = None\n",
     "\n",
     "print('start at degrees:', df.yaw_deg.iloc[0])\n",
     "for __, row in df.iterrows():\n",
@@ -198,17 +241,26 @@
     "    \n",
     "    if pd.isna(row.yaw_deg):\n",
     "        print('skipping')\n",
+    "        raw_heatmap[:, i_col] = raw_spectrum.flatten()\n",
+    "        dynamic_heatmap[:, i_col] = dynamic_spectrum.flatten()\n",
+    "        multi_heatmap[:, i_col] = multi_spectrum.flatten()\n",
+    "        times[i_col] = time_sec\n",
+    "        i_col += 1\n",
     "        continue\n",
     "    \n",
     "    orientation_deg = row.yaw_deg\n",
     "    timestamp = row.timestamp\n",
     "    \n",
-    "    R = beam_former.get_correlation(signals_f.T) # n_freqs x n_mics x n_mics\n",
+    "    R_new = beam_former.get_correlation(signals_f.T) # n_freqs x n_mics x n_mics\n",
+    "    if R is None:\n",
+    "        R = R_new\n",
+    "    else:\n",
+    "        R = alpha*R_new + (1-alpha)*R\n",
     "    #raw_spectrum = beam_former.get_das_spectrum(R, freqs)\n",
     "    raw_spectrum = beam_former.get_mvdr_spectrum(R, freqs)\n",
     "    \n",
     "    #### DYNAMIC\n",
-    "    beam_former.add_to_dynamic_estimates(raw_spectrum, orientation_deg=-orientation_deg)\n",
+    "    beam_former.add_to_dynamic_estimates(raw_spectrum, orientation_deg=orientation_deg)\n",
     "    dynamic_spectrum = beam_former.get_dynamic_estimate()\n",
     "    dynamic_spectrum = combine_rows(dynamic_spectrum, combination_method, keepdims=True)\n",
     "    dynamic_spectrum = normalize_rows(dynamic_spectrum, method=\"zero_to_one\")\n",
@@ -220,7 +272,7 @@
     "    \n",
     "    #### MULTI\n",
     "    time_sec = row.audio_timestamp / 1e6\n",
-    "    beam_former.add_to_multi_estimate(signals_f.T, freqs, time_sec, -orientation_deg)\n",
+    "    beam_former.add_to_multi_estimate(signals_f.T, freqs, time_sec, orientation_deg)\n",
     "    multi_counter += 1 #TODO(FD) add this to beam_former\n",
     "    multi_spectrum = beam_former.get_multi_estimate(method='mvdr')\n",
     "    multi_spectrum = combine_rows(multi_spectrum, combination_method, keepdims=True)\n",
@@ -237,7 +289,83 @@
     "    i_col += 1\n",
     "        \n",
     "    if i_col >= n_columns:\n",
-    "        break"
+    "        break\n",
+    "        \n",
+    "        \n",
+    "times -= times[0]\n",
+    "        \n",
+    "df_results.loc[len(df_results), : ] = {\n",
+    " 'exp_name': exp_name,\n",
+    " 'degree': degree,\n",
+    " 'motors': params['motors'],\n",
+    " 'combination_n': combination_n,\n",
+    " 'combination_method': combination_method,\n",
+    " 'normalization_method': normalization_method,\n",
+    " 'max_counter': MAX_COUNTER,\n",
+    " 'raw_heatmap': raw_heatmap,\n",
+    " 'dynamic_heatmap': dynamic_heatmap,\n",
+    " 'multi_heatmap': multi_heatmap\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plotting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "print(multi_heatmap.shape)\n",
+    "\n",
+    "df_results = pd.read_pickle('df_results.pkl')\n",
+    "\n",
+    "motors = False\n",
+    "plots = [\n",
+    "    dict(exp_name = '2020_10_30_dynamic_test', degree=0, motors=''),\n",
+    "    dict(exp_name = '2020_10_30_dynamic_test', degree=90, motors=''),\n",
+    "    dict(exp_name = '2020_10_30_dynamic_move', degree=0, motors='')\n",
+    "]\n",
+    "\n",
+    "    \n",
+    "for plot_dict in plots:\n",
+    "    \n",
+    "    exp_name = plot_dict.get('exp_name')\n",
+    "    degree = plot_dict.get('degree')\n",
+    "    \n",
+    "    for motors in [True, False]:\n",
+    "        plot_dict['motors'] = motors\n",
+    "        #df_chosen = df_results.iloc[-1] # latest result\n",
+    "        try:\n",
+    "            df_chosen = df_results.loc[(df_results.exp_name==exp_name) & \n",
+    "                                       (df_results.degree==degree) &\n",
+    "                                       (df_results.motors==motors)].iloc[-1] # exp_name\n",
+    "        except:\n",
+    "            print('ignoring', plot_dict)\n",
+    "\n",
+    "        times = range(df_chosen.raw_heatmap.shape[1])\n",
+    "        angles = beam_former.theta_scan * 180 / np.pi\n",
+    "\n",
+    "        fig, axs = plt.subplots(1, 3)\n",
+    "        fig.set_size_inches(15, 5)\n",
+    "        axs[0].pcolormesh(times, angles, df_chosen.raw_heatmap)\n",
+    "        axs[0].set_title('raw heatmap')\n",
+    "\n",
+    "        axs[1].pcolormesh(times, angles, df_chosen.multi_heatmap)\n",
+    "        axs[1].set_title('multi heatmap')\n",
+    "\n",
+    "        axs[2].pcolormesh(times, angles, df_chosen.dynamic_heatmap)\n",
+    "        axs[2].set_title('dynamic heatmap')\n",
+    "\n",
+    "        axs[0].set_ylabel('angle [deg]')\n",
+    "        fig.suptitle(plot_dict)"
    ]
   },
   {
@@ -246,31 +374,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(multi_heatmap.shape)\n",
-    "\n",
-    "times -= times[0]\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.pcolormesh(times, angles, multi_heatmap)\n",
-    "ax.set_title('multi heatmap')\n",
-    "ax.set_xlabel('time [s]')\n",
-    "ax.set_ylabel('angle [rad]')\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.pcolormesh(times, angles, dynamic_heatmap)\n",
-    "ax.set_title('dynamic heatmap')\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.pcolormesh(times, angles, raw_heatmap)\n",
-    "ax.set_title('raw heatmap')"
+    "#df_results.to_pickle('df_results.pkl')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
