Start new experiment analysis

--- a/notebooks/DynamicAnalysis.ipynb
+++ b/notebooks/DynamicAnalysis.ipynb
@@ -59,21 +59,25 @@
     "from evaluate_data import read_df, get_spec\n",
     "\n",
     "#exp_name = '2020_10_30_dynamic'; degree=0 # correct mic positions, but only one degree\n",
-    "exp_name = '2020_10_30_dynamic_test'; degree=0; #degree=90;\n",
+    "#exp_name = '2020_10_30_dynamic_test'; degree=0; #degree=90;\n",
     "#exp_name = '2020_10_30_dynamic_move'; degree=0\n",
+    "exp_name = '2020_11_03_sweep'; degree=90; start_idx = 20\n",
     "\n",
     "params = dict(\n",
     "    degree = degree,\n",
     "    props = False,\n",
     "    snr = False,\n",
     "    motors = True,\n",
-    "    source = 'mono',\n",
+    "    source = 'mono_linear',\n",
     "    exp_name = exp_name\n",
     ")\n",
     "\n",
     "df, df_pos = read_df(**params)\n",
     "df.head()\n",
-    "f_wav, t_wav, spectrogram_wav = get_spec(**params)"
+    "f_wav, t_wav, spectrogram_wav = get_spec(**params)\n",
+    "\n",
+    "df = df.iloc[20:]\n",
+    "df_pos = df_pos.iloc[20:]"
    ]
   },
   {
@@ -83,6 +87,25 @@
    "outputs": [],
    "source": [
     "df_pos.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
+    "all_frequencies = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
+    "frequency_matrix = np.zeros((len(all_frequencies), len(df)))\n",
+    "i_col = 0\n",
+    "for j, row in df.iterrows():\n",
+    "    for f in row.frequencies:\n",
+    "        frequency_matrix[np.where(f==all_frequencies), i_col] = 1.0 \n",
+    "    i_col += 1\n",
+    "fig = plt.figure()\n",
+    "plt.pcolormesh(frequency_matrix[:, :50]) \n",
+    "fig.set_size_inches(10, 5)"
    ]
   },
   {
@@ -209,9 +232,10 @@
    "source": [
     "from audio_stack.beam_former import BeamFormer\n",
     "from audio_stack.spectrum_estimator import normalize_rows, combine_rows\n",
+    "import progressbar\n",
     "\n",
     "MAX_COUNTER = 5\n",
-    "alpha=0.5 # set to 1 for no effect\n",
+    "alpha = 0.5 # set to 1 for no effect\n",
     "\n",
     "combination_n = MAX_COUNTER\n",
     "combination_method = \"sum\"\n",
@@ -235,65 +259,63 @@
     "R = None\n",
     "\n",
     "print('start at degrees:', df.yaw_deg.iloc[0])\n",
-    "for __, row in df.iterrows():\n",
-    "    signals_f = row.signals_f[:, selected_idx]\n",
-    "    freqs = row.frequencies[selected_idx]\n",
-    "    \n",
-    "    if pd.isna(row.yaw_deg):\n",
-    "        print('skipping')\n",
+    "with progressbar.ProgressBar(max_value=n_columns, redirect_stdout=True) as p:\n",
+    "    for __, row in df.iterrows():\n",
+    "        signals_f = row.signals_f[:, selected_idx]\n",
+    "        freqs = row.frequencies[selected_idx]\n",
+    "        print(freqs)\n",
+    "\n",
+    "        orientation_deg = row.yaw_deg\n",
+    "        timestamp = row.timestamp\n",
+    "        \n",
+    "        R_new = beam_former.get_correlation(signals_f.T) # n_freqs x n_mics x n_mics\n",
+    "        if R is None:\n",
+    "            R = R_new\n",
+    "        else:\n",
+    "            R = alpha*R_new + (1-alpha)*R\n",
+    "        #raw_spectrum = beam_former.get_das_spectrum(R, freqs)\n",
+    "        raw_spectrum = beam_former.get_mvdr_spectrum(R, freqs)\n",
+    "\n",
+    "        if not pd.isna(row.yaw_deg):\n",
+    "            #### DYNAMIC\n",
+    "            beam_former.add_to_dynamic_estimates(raw_spectrum, orientation_deg=orientation_deg)\n",
+    "            dynamic_spectrum = beam_former.get_dynamic_estimate()\n",
+    "            dynamic_spectrum = combine_rows(dynamic_spectrum, combination_method, keepdims=True)\n",
+    "            dynamic_spectrum = normalize_rows(dynamic_spectrum, method=\"zero_to_one\")\n",
+    "            #dynamic_spectrum = beam_former.shift_spectrum(dynamic_spectrum, orientation_deg)\n",
+    "\n",
+    "            #### MULTI\n",
+    "            time_sec = row.audio_timestamp / 1e6\n",
+    "            beam_former.add_to_multi_estimate(signals_f.T, freqs, time_sec, orientation_deg)\n",
+    "            multi_counter += 1 #TODO(FD) add this to beam_former\n",
+    "            multi_spectrum = beam_former.get_multi_estimate(method='mvdr')\n",
+    "            multi_spectrum = combine_rows(multi_spectrum, combination_method, keepdims=True)\n",
+    "            multi_spectrum = normalize_rows(multi_spectrum, method=\"zero_to_one\")\n",
+    "\n",
+    "            if multi_counter > MAX_COUNTER:\n",
+    "                beam_former.init_multi_estimate(frequencies)\n",
+    "                multi_counter = 0\n",
+    "        else:\n",
+    "            print('not updating dynamic and multi:', i_col)\n",
+    "                \n",
+    "        #### RAW\n",
+    "        raw_spectrum = combine_rows(raw_spectrum, combination_method, keepdims=True)\n",
+    "        raw_spectrum = normalize_rows(raw_spectrum, method=\"zero_to_one\")\n",
+    "\n",
     "        raw_heatmap[:, i_col] = raw_spectrum.flatten()\n",
     "        dynamic_heatmap[:, i_col] = dynamic_spectrum.flatten()\n",
     "        multi_heatmap[:, i_col] = multi_spectrum.flatten()\n",
     "        times[i_col] = time_sec\n",
     "        i_col += 1\n",
-    "        continue\n",
-    "    \n",
-    "    orientation_deg = row.yaw_deg\n",
-    "    timestamp = row.timestamp\n",
-    "    \n",
-    "    R_new = beam_former.get_correlation(signals_f.T) # n_freqs x n_mics x n_mics\n",
-    "    if R is None:\n",
-    "        R = R_new\n",
-    "    else:\n",
-    "        R = alpha*R_new + (1-alpha)*R\n",
-    "    #raw_spectrum = beam_former.get_das_spectrum(R, freqs)\n",
-    "    raw_spectrum = beam_former.get_mvdr_spectrum(R, freqs)\n",
-    "    \n",
-    "    #### DYNAMIC\n",
-    "    beam_former.add_to_dynamic_estimates(raw_spectrum, orientation_deg=orientation_deg)\n",
-    "    dynamic_spectrum = beam_former.get_dynamic_estimate()\n",
-    "    dynamic_spectrum = combine_rows(dynamic_spectrum, combination_method, keepdims=True)\n",
-    "    dynamic_spectrum = normalize_rows(dynamic_spectrum, method=\"zero_to_one\")\n",
-    "    #dynamic_spectrum = beam_former.shift_spectrum(dynamic_spectrum, orientation_deg)\n",
-    "    \n",
-    "    #### RAW\n",
-    "    raw_spectrum = combine_rows(raw_spectrum, combination_method, keepdims=True)\n",
-    "    raw_spectrum = normalize_rows(raw_spectrum, method=\"zero_to_one\")\n",
-    "    \n",
-    "    #### MULTI\n",
-    "    time_sec = row.audio_timestamp / 1e6\n",
-    "    beam_former.add_to_multi_estimate(signals_f.T, freqs, time_sec, orientation_deg)\n",
-    "    multi_counter += 1 #TODO(FD) add this to beam_former\n",
-    "    multi_spectrum = beam_former.get_multi_estimate(method='mvdr')\n",
-    "    multi_spectrum = combine_rows(multi_spectrum, combination_method, keepdims=True)\n",
-    "    multi_spectrum = normalize_rows(multi_spectrum, method=\"zero_to_one\")\n",
-    "    \n",
-    "    if multi_counter > MAX_COUNTER:\n",
-    "        beam_former.init_multi_estimate(frequencies)\n",
-    "        multi_counter = 0\n",
-    "    \n",
-    "    raw_heatmap[:, i_col] = raw_spectrum.flatten()\n",
-    "    dynamic_heatmap[:, i_col] = dynamic_spectrum.flatten()\n",
-    "    multi_heatmap[:, i_col] = multi_spectrum.flatten()\n",
-    "    times[i_col] = time_sec\n",
-    "    i_col += 1\n",
-    "        \n",
-    "    if i_col >= n_columns:\n",
-    "        break\n",
-    "        \n",
-    "        \n",
+    "\n",
+    "        if i_col >= n_columns:\n",
+    "            break\n",
+    "            \n",
+    "        p.update(i_col)\n",
+    "\n",
+    "\n",
     "times -= times[0]\n",
-    "        \n",
+    "\n",
     "df_results.loc[len(df_results), : ] = {\n",
     " 'exp_name': exp_name,\n",
     " 'degree': degree,\n",
@@ -325,7 +347,7 @@
    "source": [
     "print(multi_heatmap.shape)\n",
     "\n",
-    "df_results = pd.read_pickle('df_results.pkl')\n",
+    "#df_results = pd.read_pickle('df_results.pkl')\n",
     "\n",
     "motors = False\n",
     "plots = [\n",
@@ -334,6 +356,11 @@
     "    dict(exp_name = '2020_10_30_dynamic_move', degree=0, motors='')\n",
     "]\n",
     "\n",
+    "plots = [\n",
+    "    dict(exp_name = '2020_11_03_sweep', degree=90, motors=''),\n",
+    "]\n",
+    "\n",
+    "print(df_results.exp_name.unique())\n",
     "    \n",
     "for plot_dict in plots:\n",
     "    \n",
@@ -347,8 +374,10 @@
     "            df_chosen = df_results.loc[(df_results.exp_name==exp_name) & \n",
     "                                       (df_results.degree==degree) &\n",
     "                                       (df_results.motors==motors)].iloc[-1] # exp_name\n",
+    "            print('read', plot_dict)\n",
     "        except:\n",
     "            print('ignoring', plot_dict)\n",
+    "            continue\n",
     "\n",
     "        times = range(df_chosen.raw_heatmap.shape[1])\n",
     "        angles = beam_former.theta_scan * 180 / np.pi\n",
