Add new experiment results

--- a/notebooks/DynamicAnalysis.ipynb
+++ b/notebooks/DynamicAnalysis.ipynb
@@ -58,10 +58,14 @@
    "source": [
     "from evaluate_data import read_df, get_spec\n",
     "\n",
-    "#exp_name = '2020_10_30_dynamic'; degree=0 # correct mic positions, but only one degree\n",
-    "#exp_name = '2020_10_30_dynamic_test'; degree=0; #degree=90;\n",
-    "#exp_name = '2020_10_30_dynamic_move'; degree=0\n",
-    "exp_name = '2020_11_03_sweep'; degree=90; start_idx = 20\n",
+    "#exp_name = '2020_10_30_dynamic'; degree=0; start_idx = 0# correct mic positions, but only one degree\n",
+    "#exp_name = '2020_10_30_dynamic_test'; degree=0; start_idx=0 #degree=90; \n",
+    "#exp_name = '2020_10_30_dynamic_move'; degree=0; start_idx=0\n",
+    "#exp_name = '2020_11_03_sweep_old'; degree=90; start_idx = 20\n",
+    "\n",
+    "\n",
+    "# TODO: clean the csv file instead of reading only from start_idx here. \n",
+    "exp_name = '2020_11_03_sweep'; degree=90; start_idx = 330 #20\n",
     "\n",
     "params = dict(\n",
     "    degree = degree,\n",
@@ -76,8 +80,21 @@
     "df.head()\n",
     "f_wav, t_wav, spectrogram_wav = get_spec(**params)\n",
     "\n",
-    "df = df.iloc[20:]\n",
-    "df_pos = df_pos.iloc[20:]"
+    "df = df.iloc[start_idx:]\n",
+    "df_pos = df_pos.iloc[start_idx:]\n",
+    "#df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.plot(df.timestamp.values)\n",
+    "df_short = df.iloc[300:]\n",
+    "plt.plot(df_short.timestamp.values)"
    ]
   },
   {
@@ -104,7 +121,7 @@
     "        frequency_matrix[np.where(f==all_frequencies), i_col] = 1.0 \n",
     "    i_col += 1\n",
     "fig = plt.figure()\n",
-    "plt.pcolormesh(frequency_matrix[:, :50]) \n",
+    "plt.pcolormesh(range(50), all_frequencies, frequency_matrix[:, :50]) \n",
     "fig.set_size_inches(10, 5)"
    ]
   },
@@ -163,6 +180,7 @@
     "plt.figure()\n",
     "for i in selected_idx:\n",
     "    plt.plot(times, spectrogram[i, :], label=f'{frequencies[i]:.1f}Hz')\n",
+    "plt.title('recorded spectrogram at each bin')\n",
     "plt.legend()\n",
     "\n",
     "plt.figure()\n",
@@ -263,7 +281,6 @@
     "    for __, row in df.iterrows():\n",
     "        signals_f = row.signals_f[:, selected_idx]\n",
     "        freqs = row.frequencies[selected_idx]\n",
-    "        print(freqs)\n",
     "\n",
     "        orientation_deg = row.yaw_deg\n",
     "        timestamp = row.timestamp\n",
@@ -334,7 +351,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plotting"
+    "# Plotting (can start here directly!)"
    ]
   },
   {
@@ -345,11 +362,7 @@
    },
    "outputs": [],
    "source": [
-    "print(multi_heatmap.shape)\n",
-    "\n",
-    "#df_results = pd.read_pickle('df_results.pkl')\n",
-    "\n",
-    "motors = False\n",
+    "from audio_stack.beam_former import BeamFormer\n",
     "plots = [\n",
     "    dict(exp_name = '2020_10_30_dynamic_test', degree=0, motors=''),\n",
     "    dict(exp_name = '2020_10_30_dynamic_test', degree=90, motors=''),\n",
@@ -358,14 +371,18 @@
     "\n",
     "plots = [\n",
     "    dict(exp_name = '2020_11_03_sweep', degree=90, motors=''),\n",
+    "    #dict(exp_name = '2020_11_03_sweep_old', degree=90, motors=''),\n",
     "]\n",
     "\n",
-    "print(df_results.exp_name.unique())\n",
-    "    \n",
+    "BeamFormer()\n",
+    "\n",
     "for plot_dict in plots:\n",
     "    \n",
     "    exp_name = plot_dict.get('exp_name')\n",
     "    degree = plot_dict.get('degree')\n",
+    "    \n",
+    "    fname = f'DynamicAnalaysis_{exp_name}.pkl'\n",
+    "    df_results = pd.read_pickle(fname)\n",
     "    \n",
     "    for motors in [True, False]:\n",
     "        plot_dict['motors'] = motors\n",
@@ -380,7 +397,7 @@
     "            continue\n",
     "\n",
     "        times = range(df_chosen.raw_heatmap.shape[1])\n",
-    "        angles = beam_former.theta_scan * 180 / np.pi\n",
+    "        angles = BeamFormer.theta_scan * 180 / np.pi\n",
     "\n",
     "        fig, axs = plt.subplots(1, 3)\n",
     "        fig.set_size_inches(15, 5)\n",
@@ -403,7 +420,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_results.to_pickle('df_results.pkl')"
+    "#fname = f'DynamicAnalaysis_{exp_name}.pkl'\n",
+    "#df_results.to_pickle(fname)\n",
+    "#print('saved as', fname)"
    ]
   },
   {
