--- a/notebooks/DynamicAnalysis.ipynb
+++ b/notebooks/DynamicAnalysis.ipynb
@@ -65,13 +65,13 @@
     "\n",
     "\n",
     "# TODO: clean the csv file instead of reading only from start_idx here. \n",
-    "exp_name = '2020_11_03_sweep'; degree=90; start_idx = 330 #20\n",
+    "exp_name = '2020_11_03_sweep'; degree=90; start_idx = 20\n",
     "\n",
     "params = dict(\n",
     "    degree = degree,\n",
     "    props = False,\n",
     "    snr = False,\n",
-    "    motors = True,\n",
+    "    motors = False,\n",
     "    source = 'mono_linear',\n",
     "    exp_name = exp_name\n",
     ")\n",
@@ -81,20 +81,9 @@
     "f_wav, t_wav, spectrogram_wav = get_spec(**params)\n",
     "\n",
     "df = df.iloc[start_idx:]\n",
-    "df_pos = df_pos.iloc[start_idx:]\n",
-    "#df.head()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure()\n",
-    "plt.plot(df.timestamp.values)\n",
-    "df_short = df.iloc[300:]\n",
-    "plt.plot(df_short.timestamp.values)"
+    "index_start = df.iloc[0]['index']\n",
+    "df_pos = df_pos.loc[df_pos.index >= index_start]\n",
+    "df.head()"
    ]
   },
   {
@@ -104,6 +93,18 @@
    "outputs": [],
    "source": [
     "df_pos.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.scatter(df_pos.timestamp.values, [1]*len(df_pos), label='df_pos')\n",
+    "plt.scatter(df.timestamp.values, [0]*len(df), label='df')\n",
+    "plt.legend()"
    ]
   },
   {
@@ -203,7 +204,11 @@
     "    timestamp = row.timestamp\n",
     "    \n",
     "    # most recent position timestamp\n",
-    "    pos_idx = df_pos[df_pos.timestamp < timestamp].index[-1]\n",
+    "    if not len(df_pos[df_pos.timestamp <= timestamp]):\n",
+    "        df.loc[i, 'yaw_deg'] = None\n",
+    "        print('not position before first audio:', timestamp, df_pos.timestamp.values)\n",
+    "        continue\n",
+    "    pos_idx = df_pos[df_pos.timestamp <= timestamp].index[-1]\n",
     "    lag = timestamp - df_pos.loc[pos_idx].timestamp\n",
     "    if lag <= MAX_ALLOWED_LAG_MS:\n",
     "        df.loc[i, 'yaw_deg'] = df_pos.loc[pos_idx].yaw_deg\n",
@@ -217,7 +222,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "start_pos = np.array([0, 0])\n",
@@ -268,17 +275,25 @@
     "n_columns = len(df) #100\n",
     "angles = beam_former.theta_scan\n",
     "times = np.empty(n_columns)\n",
-    "raw_heatmap = np.empty((len(angles), n_columns))\n",
-    "dynamic_heatmap = np.empty((len(angles), n_columns))\n",
-    "multi_heatmap = np.empty((len(angles), n_columns))\n",
+    "raw_heatmap = np.zeros((len(angles), n_columns))\n",
+    "dynamic_heatmap = np.zeros((len(angles), n_columns))\n",
+    "multi_heatmap = np.zeros((len(angles), n_columns))\n",
     "\n",
     "multi_counter = 0\n",
     "i_col = 0\n",
     "R = None\n",
     "\n",
+    "dynamic_spectrum = None\n",
+    "multi_spectrum = None\n",
+    "\n",
     "print('start at degrees:', df.yaw_deg.iloc[0])\n",
     "with progressbar.ProgressBar(max_value=n_columns, redirect_stdout=True) as p:\n",
     "    for __, row in df.iterrows():\n",
+    "        \n",
+    "        # TODO(FD): smarter frequency bin selection\n",
+    "        selected_hz = [800]\n",
+    "        selected_idx = [np.argmin(np.abs(row.frequencies - hz)) for hz in selected_hz]\n",
+    "        \n",
     "        signals_f = row.signals_f[:, selected_idx]\n",
     "        freqs = row.frequencies[selected_idx]\n",
     "\n",
@@ -292,7 +307,8 @@
     "            R = alpha*R_new + (1-alpha)*R\n",
     "        #raw_spectrum = beam_former.get_das_spectrum(R, freqs)\n",
     "        raw_spectrum = beam_former.get_mvdr_spectrum(R, freqs)\n",
-    "\n",
+    "        time_sec = row.audio_timestamp / 1e6\n",
+    "        \n",
     "        if not pd.isna(row.yaw_deg):\n",
     "            #### DYNAMIC\n",
     "            beam_former.add_to_dynamic_estimates(raw_spectrum, orientation_deg=orientation_deg)\n",
@@ -302,15 +318,14 @@
     "            #dynamic_spectrum = beam_former.shift_spectrum(dynamic_spectrum, orientation_deg)\n",
     "\n",
     "            #### MULTI\n",
-    "            time_sec = row.audio_timestamp / 1e6\n",
-    "            beam_former.add_to_multi_estimate(signals_f.T, freqs, time_sec, orientation_deg)\n",
+    "            beam_former.add_to_multi_estimate(signals_f.T, freqs, time_sec, -orientation_deg)\n",
     "            multi_counter += 1 #TODO(FD) add this to beam_former\n",
     "            multi_spectrum = beam_former.get_multi_estimate(method='mvdr')\n",
     "            multi_spectrum = combine_rows(multi_spectrum, combination_method, keepdims=True)\n",
     "            multi_spectrum = normalize_rows(multi_spectrum, method=\"zero_to_one\")\n",
     "\n",
     "            if multi_counter > MAX_COUNTER:\n",
-    "                beam_former.init_multi_estimate(frequencies)\n",
+    "                beam_former.init_multi_estimate(freqs)\n",
     "                multi_counter = 0\n",
     "        else:\n",
     "            print('not updating dynamic and multi:', i_col)\n",
@@ -320,8 +335,10 @@
     "        raw_spectrum = normalize_rows(raw_spectrum, method=\"zero_to_one\")\n",
     "\n",
     "        raw_heatmap[:, i_col] = raw_spectrum.flatten()\n",
-    "        dynamic_heatmap[:, i_col] = dynamic_spectrum.flatten()\n",
-    "        multi_heatmap[:, i_col] = multi_spectrum.flatten()\n",
+    "        if dynamic_spectrum is not None:\n",
+    "            dynamic_heatmap[:, i_col] = dynamic_spectrum.flatten()\n",
+    "        if multi_spectrum is not None:\n",
+    "            multi_heatmap[:, i_col] = multi_spectrum.flatten()\n",
     "        times[i_col] = time_sec\n",
     "        i_col += 1\n",
     "\n",
@@ -329,9 +346,6 @@
     "            break\n",
     "            \n",
     "        p.update(i_col)\n",
-    "\n",
-    "\n",
-    "times -= times[0]\n",
     "\n",
     "df_results.loc[len(df_results), : ] = {\n",
     " 'exp_name': exp_name,\n",
@@ -345,6 +359,19 @@
     " 'dynamic_heatmap': dynamic_heatmap,\n",
     " 'multi_heatmap': multi_heatmap\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df_results.exp_name.unique())\n",
+    "print(df_results.motors.unique())\n",
+    "fname = f'DynamicAnalaysis_{exp_name}_MINUS.pkl'\n",
+    "df_results.to_pickle(fname)\n",
+    "print('saved as', fname)"
    ]
   },
   {
@@ -381,8 +408,11 @@
     "    exp_name = plot_dict.get('exp_name')\n",
     "    degree = plot_dict.get('degree')\n",
     "    \n",
+    "    #fname = f'DynamicAnalaysis_{exp_name}_ZEROYAW.pkl'\n",
+    "    #fname = f'DynamicAnalaysis_{exp_name}_MINUS.pkl'\n",
     "    fname = f'DynamicAnalaysis_{exp_name}.pkl'\n",
     "    df_results = pd.read_pickle(fname)\n",
+    "    print('read', fname)\n",
     "    \n",
     "    for motors in [True, False]:\n",
     "        plot_dict['motors'] = motors\n",
@@ -412,17 +442,6 @@
     "\n",
     "        axs[0].set_ylabel('angle [deg]')\n",
     "        fig.suptitle(plot_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#fname = f'DynamicAnalaysis_{exp_name}.pkl'\n",
-    "#df_results.to_pickle(fname)\n",
-    "#print('saved as', fname)"
    ]
   },
   {
