--- a/notebooks/DynamicAnalysis.ipynb
+++ b/notebooks/DynamicAnalysis.ipynb
@@ -315,10 +315,9 @@
     "            dynamic_spectrum = beam_former.get_dynamic_estimate()\n",
     "            dynamic_spectrum = combine_rows(dynamic_spectrum, combination_method, keepdims=True)\n",
     "            dynamic_spectrum = normalize_rows(dynamic_spectrum, method=\"zero_to_one\")\n",
-    "            #dynamic_spectrum = beam_former.shift_spectrum(dynamic_spectrum, orientation_deg)\n",
     "\n",
     "            #### MULTI\n",
-    "            beam_former.add_to_multi_estimate(signals_f.T, freqs, time_sec, -orientation_deg)\n",
+    "            beam_former.add_to_multi_estimate(signals_f.T, freqs, time_sec, orientation_deg)\n",
     "            multi_counter += 1 #TODO(FD) add this to beam_former\n",
     "            multi_spectrum = beam_former.get_multi_estimate(method='mvdr')\n",
     "            multi_spectrum = combine_rows(multi_spectrum, combination_method, keepdims=True)\n",
